--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,14 +1,19 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "CommonJS",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "rootDir": "./",
     "outDir": "dist",
     "esModuleInterop": true,
+    "baseUrl": ".",
+    "paths": {
+      "@shared/*": ["../shared/*"]
+    },
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
   },
   "include": ["./**/*.ts"],
-  "exclude": ["../client", "../node_modules"]
+  "exclude": ["../client", "../vite.config.ts", "../node_modules"]
 }
